--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,4 +1,3 @@
-body{
-    background-image: image('resources\images\logo.png');
-    background-color: green !important;
-}
+// body{
+//     background-color: green !important;
+// }
