description is limited to 3 lines

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10935,3 +10935,12 @@ body {
   margin-bottom: 30px;
 }
 
+.three-lines {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
