--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,3 +1,11 @@
 // body{
 //     background-color: green !important;
 // }
+.three-lines {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    /* number of lines to show */
+    -webkit-box-orient: vertical;
+  }
