icons replaced the link(view,add,fav)

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -9,3 +9,19 @@
     /* number of lines to show */
     -webkit-box-orient: vertical;
   }
+  .one-line {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    /* number of lines to show */
+    -webkit-box-orient: vertical;
+  }
+  .two-lines {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* number of lines to show */
+    -webkit-box-orient: vertical;
+  }
