padding removed(was a blunder for responsiveness), more elegant carousel implemented for index(needs details of the products)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10884,7 +10884,7 @@ a.text-dark:focus {
 
 html,
 body {
-  padding: 65px;
+  padding-top: 65px;
   background-color: #fff;
   color: #636b6f;
   font-family: "Nunito", sans-serif;
