--- a/resources/sass/_laravel.scss
+++ b/resources/sass/_laravel.scss
@@ -1,5 +1,5 @@
 html, body {
-    padding: 65px;
+    padding-top: 65px;
     background-color: #fff;
     color: #636b6f;
     font-family: 'Nunito', sans-serif;
